add design for home and index

--- a/my-project/index.html
+++ b/my-project/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href='../my-project/src/assets/Logo.webp' />
+    <link rel="icon" type="image/svg+xml" href='https://media.discordapp.net/attachments/1189462489675603991/1189469569920798802/1.png?ex=659e46dc&is=658bd1dc&hm=b064d5d6a7972408bab7b2816677c2a3353117960b7578e4555edbf0bc1d5ee2&=&format=webp&quality=lossless&width=769&height=577' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Girfaph</title>
   </head>
